style.css
h1 {
	font-size: 220%;
}
h2 {
	font-size: 200%;
}
h3 {
	font-size: 180%;
}
h4 {
	font-size: 160%;
}
h5{
	font-size: 140%;
}
h6 {
	font-size: 120%;
}

p {
    font-family: Gotham, “Helvetica Neue”, Helvetica, Arial, sans-serif;
}

a {
	font-family: Gotham, “Helvetica Neue”, Helvetica, Arial, sans-serif;
	text-decoration: none;
}

a:link{
	color: #000000;
}

a:visited{
	color: #000000;
}

a:hover{
	color: #FFFFFF;
}

a:active{
	color: #999999;
}

body {
	font-family: Gotham, “Helvetica Neue”, Helvetica, Arial, sans-serif;
	font-weight: bold;
	background-color: #000000;
	text-align: center;
	margin: 0px;
  	padding: 0px;
    width: 100%;
}

.row {
  margin-right: 0px;
  margin-left: 0px;
}

@media only screen and (min-width: 480px) {

.floatbox h1{
	text-align: center;
	position: fixed;
  	top: 50%;
  	z-index: auto;
  	width: 10%;
  	text-shadow: 2px 2px #FFFFFF;
}

.siteframes{
	height: 100vh;
    width: 100vw;
    position: relative;
}

#window1.floatbox h1 {left: 10%;}
#window2.floatbox h1 {left: 20%;}
#window3.floatbox h1 {left: 30%;}
#window4.floatbox h1 {left: 40%;}
#window5.floatbox h1 {left: 50%;}
#window6.floatbox h1 {left: 60%;}
#window7.floatbox h1 {left: 70%;}
#window8.floatbox h1 {left: 80%;}

}

@media only screen and (max-width: 480px) {

	.floatbox h1{
		color: #000000;
		text-align: center;
		position: fixed;
		left: 0%;
	  	z-index: auto;
	  	width: 10%;
	  	text-shadow: 2px 2px #FFFFFF;

	}

	.siteframes{
		height: 100vh;
	    width: 100vw;
	    position: relative;
	}

	#window1.floatbox h1 {top: 10%; left: 5%;}
	#window2.floatbox h1 {top: 20%; left: 15%;}
	#window3.floatbox h1 {top: 30%; left: 25%;}
	#window4.floatbox h1 {top: 40%; left: 35%;}
	#window5.floatbox h1 {top: 50%; left: 45%;}
	#window6.floatbox h1 {top: 60%; left: 55%;}
	#window7.floatbox h1 {top: 70%; left: 65%;}
	#window8.floatbox h1 {top: 80%; left: 75%;}

}



#window1 { background: url("images/main/01.jpg") no-repeat center fixed; z-index: 8;}
#window2 { background: url("images/main/02.jpg") no-repeat center fixed; z-index: 7;}
#window3 { background: url("images/main/03.jpg") no-repeat center fixed; z-index: 6;}
#window4 { background: url("images/main/04.jpg") no-repeat center fixed; z-index: 5;}
#window5 { background: url("images/main/05.jpg") no-repeat center fixed; z-index: 4;}
#window6 { background: url("images/main/06.jpg") no-repeat center fixed; z-index: 3;}
#window7 { background: url("images/main/07.jpg") no-repeat center fixed; z-index: 2;}
#window8 { background: url("images/main/08.jpg") no-repeat center fixed; z-index: 1;}


#lastwindow{
	height: 100vh;
    width: 100vw;
    background: url("images/main/background.jpg") no-repeat center fixed;
    position: relative;
    z-index: 10;
    text-align: center;
}

#lastwindow ul li {
	text-align: center;
	list-style: none;
	display: block;
}

hr {
	margin: 0.5em 0em 0.5em 0em ;
	padding: 0em;

}

#bcholder {
	padding-top: 10vh;
    position: relative;
    width: 400px;
    height: 400px;
}

#bandcamp {
	border: 0; 
	width: 100%; 
	height: 100%;
	position: absolute;
    left: 0;
}


#facebook, #instagram, #twitter {
	color: #000000;
	font-size: 2em;
	width:6em;
	margin: 0em;
	padding: 0em;
	text-shadow: 2px 2px #FFFFFF;
}

#facebook:hover span, #instagram:hover span, #twitter:hover span {display:none}
#facebook:hover:before {content:"facebook"}
#instagram:hover:before {content:"instagram"}
#twitter:hover:before {content:"twitter"}

